--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>LIFFテスト</h1>
     <p>ログを確認してください</p>
 
-    <script src="index.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
