--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LIFFテスト</title>
-</head>
-<body>
-    <h1>LIFFテスト</h1>
-    <p>ログを確認してください</p>
-
-    <script src="main.js"></script>
-</body>
-</html>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ボディメイクナビ ユーザー登録</title>
+    <title>ボディメイクナビ</title>
+  </head>
+  <body>
+    <div id="app"></div>
