--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ボディメイクナビ ユーザー登録</title>
-    <title>ボディメイクナビ</title>
-  </head>
-  <body>
+</head>
+<body>
     <div id="app"></div>
+
+    <!-- ✅ JavaScriptファイルの読み込み -->
+    <script type="module" src="./main.js"></script>
+</body>
+</html>
